--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,8 +1,8 @@
-<div class="bg-gradient-to-br from-purple-500 to-blue-500 min-h-screen flex flex-col justify-center items-center">
-  <h1 class="text-4xl md:text-6xl text-white font-bold mb-8">Wishlist App</h1>
-  <p class="text-xl md:text-xl text-white font-bold mb-8">{{'landing'| transloco}}</p>
+<div class=" min-h-screen flex flex-col justify-center items-center">
+  <h1 class="text-6xl font-bold mb-8">Wishlist App</h1>
+  <p class="text-xl  font-bold mb-8">{{'landing'| transloco}}</p>
   <div class="flex flex-col md:flex-row gap-4">
-    <button [routerLink]="['/login']" class="bg-pink-500 hover:bg-pink-600 text-white font-bold py-2 px-4 rounded-md mb-4 md:mb-0 md:mr-4">{{'login' | transloco}}</button>
-    <button  [routerLink]="['/register']" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-md">{{'register' | transloco}}</button>
+    <button [routerLink]="['/login']" class="btn text-xl">{{'login' | transloco}}</button>
+    <button  [routerLink]="['/register']" class="btn text-xl">{{'register' | transloco}}</button>
   </div>
 </div>
