--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,16 +1,16 @@
-<div class="flex flex-col min-h-screen items-center bg-gradient-to-bl from-purple-300 to-pink-300">
-  <p class="mt-20 text-xl font-semibold">{{'hello'| transloco}} {{login.username}}!</p>
-  <div class="flex flex-col sm:flex-row justify-center mt-6 sm:mt-10 space-y-4 sm:space-y-0 sm:space-x-4">
+<div class="flex flex-col min-h-screen items-center">
+  <p class="mt-20 text-3xl font-semibold">{{'hello'| transloco}}, {{login.username}}!</p>
+  <div class="container flex flex-col sm:flex-row justify-center mt-6 sm:mt-10 space-y-4 sm:space-y-0 sm:space-x-4">
    <a [routerLink]="['/create-event']"
-      class="relative flex items-center justify-center w-full sm:w-48 py-2 px-4 text-white font-semibold bg-indigo-600 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+      class="btn w-3/4 sm:w-auto text-xl m-auto sm:m-0">
          {{'createEvent'| transloco}}
    </a>
     <a [routerLink]="['/join-event']"
-       class="relative flex items-center justify-center w-48 py-2 px-4 text-white font-semibold bg-indigo-600 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+       class="btn w-3/4 sm:w-auto text-xl m-auto sm:m-0">
        {{'joinEvent'| transloco}}
     </a>
     <a [routerLink]="['/events']"
-       class="relative flex items-center justify-center w-48 py-2 px-4 text-white font-semibold bg-indigo-600 rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+       class="btn w-3/4 sm:w-auto text-xl m-auto sm:m-0">
        {{'myEvents'| transloco}}
     </a>
   </div>
