--- a/src/app/join-event/join-event.component.html
+++ b/src/app/join-event/join-event.component.html
@@ -1,8 +1,8 @@
-<div class="flex flex-col min-h-screen items-center bg-gradient-to-bl from-purple-300 to-pink-300">
+<div class="flex flex-col min-h-screen items-center">
 <div class="flex w-full justify-center space-x-16 mt-28">
   <!-- Join an event -->
-  <div class="w-full max-w-lg bg-white rounded-lg shadow-md">
-    <h2 class="px-6 py-4 text-2xl font-bold">{{'joinEvent'| transloco}}</h2>
+  <div class="w-full max-w-lg rounded-lg bg-base-100 py-4 px-8 shadow-xl">
+    <h2 class="px-6 py-4 text-2xl font-bold ">{{'joinEvent'| transloco}}</h2>
     <form
       class="px-6 py-4 space-y-4"
       [formGroup]="joinEventForm"
@@ -10,7 +10,7 @@
     >
       <!-- Event password -->
       <div>
-        <label for="join" class="block text-gray-700 font-medium mb-2">
+        <label for="join" class="block  text-lg mb-2">
           {{'eventPassword'| transloco}}
         </label>
         <input
@@ -18,7 +18,7 @@
           formControlName="join"
           type="password"
           required
-          class="w-full border-gray-300 px-4 py-2 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
+          class="input input-ghost w-full max-w-s bg-base-300 "
           placeholder="{{'eventPassPlaceholder'| transloco}}"
         />
       </div>
@@ -27,7 +27,7 @@
         <button
           [routerLink]="['/dashboard']"
           type="submit"
-          class="inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+          class="btn bg-primary hover:bg-secondary"
         >
         {{'joinEventButton'| transloco}}
         </button>
@@ -35,7 +35,7 @@
     </form>
   </div>
 </div>
-<button (click)="back()" class="bg-purple-500 hover:bg-purple-700 text-white font-bold rounded-full w-12 h-12 flex items-center justify-center fixed bottom-8 left-8 focus:outline-none focus:shadow-outline">
+<button (click)="back()" class="bg-primary hover:bg-secondary font-bold rounded-full w-12 h-12 flex items-center justify-center fixed bottom-8 left-8">
   <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
   </svg>
