--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <html data-theme="cupcake">
+  <div class="overflow-hidden max-h-screen">
   <div class="navbar bg-base-200">
     <div class="flex-1">
       <a class="btn btn-ghost text-xl " routerLink="dashboard">WishlistApp</a>
@@ -30,5 +31,7 @@
       </div>
     </div>
   </div>
+  
 <router-outlet></router-outlet>
+</div>
 </html>
