--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -18,7 +18,7 @@
 </div>
 <button
   (click)="back()"
-  class="bg-primary hover:bg-secondary font-bold rounded-full w-12 h-12 flex items-center justify-center fixed bottom-8 left-8"
+  class="btn bg-primary hover:bg-secondary font-bold text-3xl rounded-full w-12 h-12 flex items-center justify-center fixed bottom-8 left-8"
 >
   <svg
     xmlns="http://www.w3.org/2000/svg"
@@ -30,7 +30,7 @@
     <path
       stroke-linecap="round"
       stroke-linejoin="round"
-      stroke-width="2"
+      stroke-width="3"
       d="M15 19l-7-7 7-7"
     />
   </svg>
