--- a/src/app/join-event/join-event.component.html
+++ b/src/app/join-event/join-event.component.html
@@ -35,9 +35,23 @@
     </form>
   </div>
 </div>
-<button (click)="back()" class="bg-primary hover:bg-secondary font-bold rounded-full w-12 h-12 flex items-center justify-center fixed bottom-8 left-8">
-  <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
+<button
+  (click)="back()"
+  class="btn bg-primary hover:bg-secondary font-bold text-3xl rounded-full w-12 h-12 flex items-center justify-center fixed bottom-8 left-8"
+>
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    class="w-6 h-6"
+    fill="none"
+    viewBox="0 0 24 24"
+    stroke="currentColor"
+  >
+    <path
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      stroke-width="3"
+      d="M15 19l-7-7 7-7"
+    />
   </svg>
 </button>
 </div>
