--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -1,55 +1,87 @@
-<div class="flex flex-col min-h-screen items-center bg-gradient-to-bl from-purple-300 to-pink-300">
-<div class="py-8 mt-20 mx-auto max-w-lg w-full">
-  <form [formGroup]="addItemForm" (ngSubmit)="addItem()" class="bg-white shadow-md rounded px-8 pt-2 pb-8 mb-4">
-    <h2 class="py-4 text-2xl font-bold">{{'addItem'| transloco}}</h2>
-    <div class="mb-4">
-      <label class="block text-gray-700 font-bold mb-2" for="name">{{ 'itemName' | transloco }}</label>
-      <input id="name" type="text" name="name" formControlName="name" class="input-field" required />
-    </div>
-    <div class="mb-4">
-      <label class="block text-gray-700 font-bold mb-2" for="price">{{ 'price' | transloco }}</label>
-      <input id="price" type="number" name="price" formControlName="price" class="input-field" required />
-    </div>
-    <div class="mb-4">
-      <label class="block text-gray-700 font-bold mb-2" for="note">{{ 'details' | transloco }}</label>
-      <input id="note" type="text" name="note" formControlName="note" class="input-field" required />
-    </div>
-    <div class="mb-4">
-      <label class="block text-gray-700 font-bold mb-2" for="link">{{ 'link' | transloco }}</label>
-      <input id="link" type="text" name="link" formControlName="link" class="input-field" required />
-    </div>
-    <div class="flex justify-center">
-      <button type="submit" class="btn-submit">{{ 'addItem' | transloco }}</button>
-    </div>
-  </form>
+<div class="flex flex-col min-h-screen items-center">
+  <div class="py-8 mt-20 mx-auto max-w-lg w-full">
+    <form
+      [formGroup]="addItemForm"
+      (ngSubmit)="addItem()"
+      class=" w-full max-w-lg rounded-lg bg-base-100 py-4 px-8 shadow-xl"
+    >
+      <h2 class="py-4 text-2xl font-bold">{{ "addItem" | transloco }}</h2>
+      <div class="mb-4">
+        <label class="block  font-bold mb-2" for="name">{{
+          "itemName" | transloco
+        }}</label>
+        <input
+          id="name"
+          type="text"
+          name="name"
+          formControlName="name"
+          class="input input-ghost w-full max-w-s bg-base-300"
+          required
+        />
+      </div>
+      <div class="mb-4">
+        <label class="block  font-bold mb-2" for="price">{{
+          "price" | transloco
+        }}</label>
+        <input
+          id="price"
+          type="number"
+          name="price"
+          formControlName="price"
+          class="input input-ghost w-full max-w-s bg-base-300"
+          required
+        />
+      </div>
+      <div class="mb-4">
+        <label class="block  font-bold mb-2" for="note">{{
+          "details" | transloco
+        }}</label>
+        <input
+          id="note"
+          type="text"
+          name="note"
+          formControlName="note"
+          class="input input-ghost w-full max-w-s bg-base-300"
+          required
+        />
+      </div>
+      <div class="mb-4">
+        <label class="block  font-bold mb-2" for="link">{{
+          "link" | transloco
+        }}</label>
+        <input
+          id="link"
+          type="text"
+          name="link"
+          formControlName="link"
+          class="input input-ghost w-full max-w-s bg-base-300"
+          required
+        />
+      </div>
+      <div class="flex justify-center">
+        <button type="submit" class="btn bg-primary hover:bg-secondary">
+          {{ "addItem" | transloco }}
+        </button>
+      </div>
+    </form>
+  </div>
+  <button
+    (click)="back()"
+    class="btn bg-primary hover:bg-secondary font-bold text-3xl rounded-full w-12 h-12 flex items-center justify-center fixed bottom-8 left-8"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="w-6 h-6"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke="currentColor"
+    >
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        stroke-width="3"
+        d="M15 19l-7-7 7-7"
+      />
+    </svg>
+  </button>
 </div>
-<button (click)="back()" class="bg-purple-500 hover:bg-purple-700 text-white font-bold rounded-full w-12 h-12 flex items-center justify-center fixed bottom-8 left-8 focus:outline-none focus:shadow-outline">
-  <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
-  </svg>
-</button>
-</div>
-<!-- TailwindCSS classes -->
-<style>
-  .input-field {
-    width: 100%;
-    padding: 0.75rem;
-    border: 1px solid #e2e8f0;
-    border-radius: 0.375rem;
-    font-size: 1rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  }
-
-  .btn-submit {
-    background-color: #3b82f6;
-    color: white;
-    padding: 0.75rem 1.5rem;
-    font-weight: bold;
-    border-radius: 0.375rem;
-    transition: background-color 0.3s ease-in-out;
-  }
-
-  .btn-submit:hover {
-    background-color: #2563eb;
-  }
-</style>
