--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
           </div>
         </div>
         <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-          <li class="text-2xl p-2">{{login.username}}</li>
+          <li class="text-xl p-2 font-bold">{{login.username}}</li>
           <li><a class="text-lg" routerLink="events">{{'events'| transloco}}</a></li>
           <li><a class="text-lg" routerLink="create-event">{{'createEvent'| transloco}}</a></li>
           <li><a class="text-lg" (click)="logOutTry()">{{'signout'| transloco}}</a></li>
