Fixed show/hide pass

--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -49,8 +49,8 @@
             />
             <label class="swap">
               <input type="checkbox" (click)="passwordShow()"/>
-              <div class="swap-on btn">{{ "show" | transloco }}</div>
-              <div class="swap-off btn">{{ "hide" | transloco }}</div>
+              <div class="swap-on btn">{{ "hide" | transloco }}</div>
+              <div class="swap-off btn">{{ "show" | transloco }}</div>
             </label>
             
           </div>
