--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,9 +1,9 @@
-<div class="min-h-screen bg-gradient-to-r from-purple-500 to-pink-500 flex flex-col justify-center items-center">
-  <h1 class="text-6xl font-bold text-gray-900 mb-8">{{'oops'| transloco}}</h1>
-  <p class="text-2xl text-gray-600 mb-8">{{'notFound'| transloco}}</p>
+<div class="min-h-screen flex flex-col justify-center items-center">
+  <h1 class="text-6xl font-bold mb-8">{{'oops'| transloco}}</h1>
+  <p class="text-2xl mb-8">{{'notFound'| transloco}}</p>
   <a
     routerLink="/dashboard"
-    class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-6 rounded-full focus:outline-none focus:shadow-outline"
+    class="btn bg-primary hover:bg-secondary"
     >{{'home'| transloco}}</a
   >
 </div>
